@@ -180,3 +180,4 @@ Michal Novotny
 
 wtor
   for reporting that a client may interrupt replaying on FF cards
+  for helping to debug channel switch issues on FF cards
