@@ -1,6 +1,8 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
  
+- fixed the code deciding if a device is in use for live TV or not. It did
+  not work as expected for FF cards (reported by wtor)
 - increased client side timeout for TUNE command
 - more dsyslog messages to help troubleshouting channel switch issues
 - improved the channel switch code trying to move live TV to different card
